[metadata]
name = chrome_fingerprints
version = attr: chrome_fingerprints.VERSION
description = A Collection of 10.000 self-collected Chrome Fingerprints. Wrapped in a easy-to-use API, available as a Compressed or Full-Size Json.
long_description = file: README.md
long_description_content_type = text/markdown
author = Vinyzu
url = https://github.com/Vinyzu/chrome-fingerprints
license = GNU General Public License v3.0
license_file = LICENSE
keywords = botright, playwright, browser, automation, fingerprints, fingerprinting, dataset, data
classifiers =
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet :: WWW/HTTP :: Browsers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
zip_safe = no
python_requires = >=3.8
packages = find:
install_requires =
    orjson
    dacite
    aiomisc

[options.package_data]
* = requirements.txt, geetest.torchscript, WebRTC-Leak-Shield, fingerprints.json.xz

[options.packages.find]
include = chrome_fingerprints, chrome_fingerprints.*, LICENSE
exclude = tests, .github

[options.extras_require]
testing =
    pytest
    mypy
    flake8
    tox

